karnc/tests/fixtures/negative/38_method_arg_count/input.karn
commons test {
  type Box = { value: Int }

  fn Box.adjust(self, by: Int) -> Box {
    Box { value: self.value + by }
  }

  fn bad(b: Box) -> Box {
    b.adjust()
  }
}
